# spar

./: Dockerfile  README.md  cabal.project  setup.sh  spar.cabal
src/: Data.hs  Deep.hs  Examples.hs  ManualProof.hs  Run.hs  Spar.hs
