cabal-version:       3.0
name:                spar
version:             0.1.0.0
license:             MPL-2.0
license-file:        LICENSE
author:              Elisabet Lobo-Vesga
                     Alejandro Russo
maintainer:          lobo@dpella.io
copyright:           2024 Anonymized
category:            Security

library
  exposed-modules: Spar
                 , Examples
                 , Data
  other-modules:   Deep
                 , Run
                 , ManualProof
  build-depends:       base >= 4.11
                     , ghc-typelits-knownnat >= 0.3
                     , ghc-typelits-natnormalise >= 0.6.2
                     , thoralf-plugin >= 0.1
                     , mwc-random
                     , statistics
                     , containers
                     , constraints
  hs-source-dirs:      src
  default-language:    Haskell2010
